run to servers Beget

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="🏡 Найдите свой идеальный дом с [Ваше имя] — вашим надежным агентом по недвижимости! Мы предлагаем широкий выбор объектов, индивидуальный подход и профессиональные консультации. Свяжитесь с нами сегодня и начните свой путь к новому дому!"
+      content="🏡 Найдите свой идеальный дом с Элёра — вашим надежным агентом по недвижимости! Мы предлагаем широкий выбор объектов, индивидуальный подход и профессиональные консультации. Свяжитесь с нами сегодня и начните свой путь к новому дому!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoElera.png" />
     <!--
