--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/logoEl.svg" type="image/svg+xml">
-    <link rel="icon" href="/logoElera.png" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/logoEl.svg" type="image/svg+xml">
+    <link rel="icon" href="%PUBLIC_URL%/logoElera.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="🏡 Найдите свой идеальный дом с Элёра — вашим надежным агентом по недвижимости! Мы предлагаем широкий выбор объектов, индивидуальный подход и профессиональные консультации. Свяжитесь с нами сегодня и начните свой путь к новому дому!"
     />
-    <link rel="apple-touch-icon" href="/logoElera.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoElera.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of  in the tags above.
+      Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
