--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="🏡 Найдите свой идеальный дом с Элёра — вашим надежным агентом по недвижимости! Мы предлагаем широкий выбор объектов, индивидуальный подход и профессиональные консультации. Свяжитесь с нами сегодня и начните свой путь к новому дому!"
+      content="🏡 Найдите свой идеальный дом с Эргешева Элёра — вашим надежным агентом по недвижимости! Мы предлагаем широкий выбор объектов, индивидуальный подход и профессиональные консультации. Свяжитесь с нами сегодня и начните свой путь к новому дому!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoElera.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Покупка или продажа недвижимости? Элёра — ваш надежный партнер!</title>
+    <title>Покупка или продажа недвижимости? Эргешева Элёра — ваш надежный партнер!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
